Fixed collision detection quite a bit. Still isn't perfect when hitting directly from above. Fixed bug where right paddle would jump to left side of screen and get stuck. Added scoring, and game reset after scoring. The html/css for scoring needs a lot of TLC.

--- a/static/style.css
+++ b/static/style.css
@@ -17,3 +17,40 @@ canvas {
   justify-content: center;
   align-content: center;
 }
+
+.score-board {
+  list-style: none;
+  justify-content: center;
+  position: static;
+}
+
+.title {
+  position: static;
+  margin: auto;
+  text-align: center;
+  font-size: 36px;
+  width: 50vw;
+  height: 30px;
+}
+
+#playerOne {
+  padding: 10px;
+  margin: auto;
+  font-size: 50px;
+  text-align: center;
+  border: 2px solid black;
+  width: 75px;
+  height: 75px;
+  position: fixed;
+}
+
+#playerTwo {
+  padding: 10px;
+  font-size: 50px;
+  margin: auto;
+  text-align: center;
+  border: 2px solid black;
+  width: 75px;
+  height: 75px;
+  position: relative;
+}
